operator/examples/cilium-dns-restrictions/dns-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: intercept-dns
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
      - ports:
          - port: "53"
            protocol: ANY
        rules:
          dns:
            # https://docs.cilium.io/en/stable/security/policy/language/#dns-based
            - matchPattern: "*"
  - toFQDNs:
      # allows L3 connections to github.com
      - matchName: "github.com"
      - matchPattern: "*.github.com"
